@@ -1,3 +1,13 @@
+filter_plugins_sources = []
+filter_plugins_deps = []
+
+if libavfilter_dep.found()
+  filter_plugins_sources += [
+    'HdcdFilterPlugin.cxx',
+  ]
+  filter_plugins_deps += ffmpeg_dep
+endif
+
 filter_plugins = static_library(
   'filter_plugins',
   '../../AudioCompress/compress.c',
@@ -9,6 +19,7 @@ filter_plugins = static_library(
   'NormalizeFilterPlugin.cxx',
   'ReplayGainFilterPlugin.cxx',
   'VolumeFilterPlugin.cxx',
+  filter_plugins_sources,
   include_directories: inc,
 )
 
@@ -18,5 +29,5 @@ filter_plugins_dep = declare_dependency(
     filter_api_dep,
     pcm_dep,
     config_dep,
-  ],
+  ] + filter_plugins_deps,
 )
