@@ -1,6 +1,8 @@
 ver 0.22 (not yet released)
 * input
   - ffmpeg: allow partial reads
+* filter
+  - hdcd: new plugin based on FFmpeg's "af_hdcd" for HDCD playback
 
 ver 0.21.7 (not yet released)
 * require Meson 0.49.0 for native libgcrypt-config support
